--- a/style.css
+++ b/style.css
@@ -393,7 +393,7 @@ main h3 {
   .first__modal__colors div {
     margin-bottom: 10px;
   }
-  .first__modal__sizes__text div {
+  .first__modal__sizes__text button {
     margin-bottom: 10px;
   }
   .second__modal__section {
